--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
+---
+layout: default
+comments: true
+# other options
+---
 theme: jekyll-theme-hacker
 title: Welcome to my Portfolio!
-description: I'm Digital Media Major with a Minor in Computer Science
+description: My name is Emilia and I am a digital media undergrad
