--- a/lab6/package.json
+++ b/lab6/package.json
@@ -1,8 +1,8 @@
 {
   "name": "lab6",
-  "homepage": "https://emiliahernandez.github.io/runningExercise",
+  "homepage": "https://emiliahernandez.githhub.io/runningExercise",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
