--- a/lab6/package.json
+++ b/lab6/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lab6",
-  "homepage": "https://emiliahernandez.github.io/runningExercise",
+  "homepage": "https://emiliahernandez.github.io/lab6/runningExercise",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
