--- a/lab3/package.json
+++ b/lab3/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lab3-1",
-  "homepage": "https://emiliahernandez.com/lab3/",
+  "homepage": "https://emiliahernandez.github.io/lab3/MenuApp",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
