--- a/lab3/package.json
+++ b/lab3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lab3-1",
+  "name": "lab3",
   "homepage": "https://emiliahernandez.github.io/lab3/MenuApp",
   "version": "0.1.0",
   "private": false,
