--- a/lab5/package.json
+++ b/lab5/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lab5",
-  "homepage": "https://myusername.github.io/lab5",
+  "homepage": "https://emiliahernandez.github.io/lab5",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
